# Quadrotor_CPP

./: CMakeLists.txt  Comparacion_brazo.fig  Dyn_simulator.cpp  Dyn_simulator2.cpp  Dyn_simulator3.cpp  README.md  Readme
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  q_part_record.txt
build3/: CMakeCache.txt  Makefile  Py_dynamic_v8.py  Py_dynamic_v9.py  Simscape_dynamic.slx  Simscape_dynamic2.slx  cmake_install.cmake  dotq.txt  multibody  plotter3.m  q.txt  q_10.fig  q_part_record.txt
